# python-project-lvl4

./: .gitignore  .travis.yml  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
task_manager/: settings.py  urls.py  views.py
tasks/: admin.py  filters.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_task_creator.py  0003_auto_20200429_2145.py  0004_auto_20200503_1731.py  0005_auto_20200503_1902.py  0006_auto_20200503_1906.py  0007_auto_20200503_1913.py  0008_remove_task_content.py  0009_auto_20200503_1949.py  0010_auto_20200510_1547.py  0011_auto_20200516_1814.py
tasks/templates/: base.html  index.html  tag.html  tag_update.html  tags.html  task.html  task_satuses.html  task_status.html  task_statuses.html  taskstatus_update.html
tasks/templates/tasks/: tag_confirm_delete.html  tag_form.html  task_confirm_delete.html  task_form.html  taskstatus_confirm_delete.html  taskstatus_form.html
templates/: register.html
templates/registration/: login.html  password_reset_complete.html  password_reset_done.html  password_reset_form.html
