[tool.poetry]
name = "pavelgoshurenko_task_manager"
version = "0.1.0"
description = ""
authors = ["Pavel Goshurenko <goshurenkopl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.5"
rollbar = "^0.15.0"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
gunicorn = "^20.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
