[tool.poetry]
name = "pavelgoshurenko_task_manager"
version = "0.1.0"
description = ""
authors = ["Pavel Goshurenko <goshurenkopl@gmail.com>"]

packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.5"
rollbar = "^0.15.0"
python-dotenv = "^0.13.0"
psycopg2-binary = "^2.8.5"
dj-database-url = "^0.5.0"
psycopg2 = "^2.8.5"
django-heroku = "^0.3.1"
django-bootstrap4 = "^1.1.1"
flake8 = "^3.7.9"

[tool.poetry.dev-dependencies]
gunicorn = "^20.0.4"
coverage = "^5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
